--- a/0/1.md
+++ b/0/1.md
@@ -4,23 +4,23 @@
 1. Microsoft Visual Studio 2019 Community
    - MSの提供するWindows用プログラミング環境。無料でそれなりに優秀。
    - [ここからダウンロードして指示に従ってインストール](https://visualstudio.microsoft.com/downloads)
-   - ディスク容量を数GB専有するので注意(自宅WiFiで行えば携帯の通信制限とは関係ないです)
+   - ディスク容量を数GB専有するので注意(自宅WiFiで行えば携帯の通信制限とは関係ない)
    - `C++ によるデスクトップ開発`
-     - インストール時に選択ができると思います
-     - できなかったらVisual Studio Installerを起動してインストールしてください。
+     - インストール時に選択ができるはず。
+     - できなかったらVisual Studio Installerを起動してインストールする。
 2. OpenSiv3D
-   1. **[OpenSiv3D Installer for Windows Desktop](https://siv3d.jp/downloads/Siv3D/OpenSiv3D%280.4.2%29Installer.exe)** をダウンロードして実行します。
+   1. **[OpenSiv3D Installer for Windows Desktop](https://siv3d.jp/downloads/Siv3D/OpenSiv3D%280.4.2%29Installer.exe)** をダウンロードして実行
 
 ## 0.1.2 MacOS
 用意するもの
 1. XCode
    - MacOSのソフト開発環境
 2. OpenSiv3D
-  1. **[OpenSiv3D Project Templates for macOS](https://siv3d.jp/downloads/Siv3D/siv3d_v0.4.2_macOS.zip)** をダウンロードしてファイルを展開します。
-  2. （macOS Catalina の場合）プログラム実行時に、ファイルアクセス許可のダイアログが出現するのを防ぐため、`ユーザ/デスクトップ` や `ユーザ/ダウンロード` フォルダではなく、`ユーザ/アプリケーション` フォルダへ移動させます。
+  1. **[OpenSiv3D Project Templates for macOS](https://siv3d.jp/downloads/Siv3D/siv3d_v0.4.2_macOS.zip)** をダウンロードしてファイルを展開
+  2. （macOS Catalina の場合）プログラム実行時に、ファイルアクセス許可のダイアログが出現するのを防ぐため、`ユーザ/デスクトップ` や `ユーザ/ダウンロード` フォルダではなく、`ユーザ/アプリケーション` フォルダへ移動させる
 
 ## 0.1.3 Linux
-自前で実行できる環境を整える必要があります。
+自前で実行できる環境を整える必要がある。
 実力に自身があれば自力でどうぞ。
-参考: [OpenSiv3DをArchLinuxでビルドする - Qiita](https://qiita.com/ibuki2003/items/e53739511f0d9dc3d525) :古い情報なので近いうちに新しくはしておきます。
-わからなかったら聞いてください。頑張って対応します
+参考: [OpenSiv3DをArchLinuxでビルドする - Qiita](https://qiita.com/ibuki2003/items/e53739511f0d9dc3d525) :古い情報なので近いうちに新しくしたい
+わからなかったら遠慮なく聞いてほしい。
