--- a/1/4.md
+++ b/1/4.md
@@ -1,60 +1,33 @@
-# 1.4 ファイル分割
-ファイルを分割すると何が嬉しいかと言うと、
-- コンパイルが速くなる(ことがある)
-- 目的のソースを見つけやすくなる
-- (Gitを使用する場合は特に)ファイルの変更が一部だけの影響で済む
+# 1.3 命名規則
+変数やメンバ、クラスには基本的に好きな名前が使えるが、今後数が多くなったときに全てを把握するのが難しくなり、混乱しやすくなるので、一定のルールを作ることをおすすめする。
+これはチームで開発するときは共通の取り決めとするべきである。
 
-などである。
-ファイルの分割は次のルールで行うとよい。
-- 1クラス1ファイル対
-  - ここでファイル対というのはcppファイルとhppファイルのペアのこと
-- ファイル名はクラス名を小文字に直したもの
+## 1.3.1 キャメルケース、スネークケース
+これらは命名規則でよく用いられる語である。
+英単語を複数連ねて書くときに、全て大文字/全て小文字だと読みづらいので、区切りをつける記法である。
 
-## 1.4.1 cppファイルとhppファイルの使い分け
-### hppファイル
-hppファイルはincludeをするのに使われるので、classにどのようなメンバがあるか、宣言に留める。
+### キャメルケース
+単語の境界の次の文字を大文字にするルール。
+大小の並びがラクダのコブのように見えることから。
+最初の文字を大文字にするアッパーキャメルケース、
+小文字にするローワーキャメルケースがある。
+- `UpperCamelCase`
+- `lowerCamelCase`
 
-```cpp
-#pragma once // hppが2回includeされるとエラーが出てしまうのでそれを防ぐ。先頭に書くこと
-class TestClass {
-private:
-  int a;
-public:
-  TestClass(int b);
-  int get_a();
-  void set_a(int b);
-};
-```
-このように、関数の表面だけを書いておく。
+### スネークケース
+単語の境界を`_`で表すルール。
+文字の高さをヘビに喩えている。
+英字を大文字にするアッパースネークケース、
+小文字にするローワースネークケースがある。
+- `UPPER_SNAKE_CASE`
+- `lower_snake_case`
 
-### cppファイル
-一方cppファイルはclassの挙動を記述する。hppで宣言したメソッドの定義をここに書く。
+## 決め方の例
+以下のルールは一例であるので、これに強制するものではないことに注意してほしい。
 
-```
-#include "testclass.hpp" //hppファイルを読み込まないとclassが存在してると知られない
+- クラス名: アッパーキャメルケース
+- 変数名: ローワースネークケース
+- 関数名: ローワースネークケース
+- 定数: アッパースネークケース
 
-TestClass::TestClass(int b) // TestClass を名前空間のように扱う
-  :a(b)
-  {}
-
-int TestClass::get_a() { // 返り値の型を書くこと
-  return a; // ここはクラスの中なのでprivateでも操作可
-}
-
-void TestClass::set_a(int b) {
-  a=b;
-}
-```
-
-### 1.4.1.a 補足:宣言と定義
-関数をつくるのにこの例の場合宣言と定義の2パートで行っている。
-宣言: 関数が *ある* ことを(コンパイラに)伝える。引数などの情報などでよく、関数の中身は必要ない
-定義: 関数がどのような処理をするかを伝える。
-
-呼び出しは宣言の情報だけでよく、定義が書かれていないとコンパイルするときにエラーが発生する。
-
-## 1.4.b コラム:なぜコンパイルが早くなるの?
-コンパイラはファイルごとに機械語にコンパイルを行っており、ここにとても時間がかかる。
-このあと、それぞれのファイルをつなぎ合わせて実行可能なファイルに変換するリンクという作業を行う。
-1行だけ変更したときにファイル分割をしておくと再コンパイルが必要なのが1ファイルで済む。
-このため、コンパイル時間短縮につながる。
+英語が苦手な場合はローマ字を使ってもよいし、日本語を名前に用いることもできる(おすすめしない。アルファベットと比べて表記ゆれが発生しやすいので)。チームの場合はよく相談してきめること。
