add 2.3.7 Siv3Dの命名規則

--- a/2/3.md
+++ b/2/3.md
@@ -85,3 +85,7 @@ void Main() {
 		++count;
 	}
 ```
+
+## 2.3.7 Siv3Dの命名規則
+
+Siv3Dでは、class名やnamaspace名・グローバルな関数には `UpperCamelCase` が、classのメンバ変数･メソッドには `lowerCamelCase` が使用されている。自分たちがコードを書く際もこれに従うと、命名規則が一致してきれいなコードになるだろう。
