add 色違いスクショ in 2.2.2

--- a/2/2.md
+++ b/2/2.md
@@ -31,7 +31,8 @@ VS2019を起動し、新規プロジェクトの作成に進む。
 
 続いて、ビルド・実行する方法を見ていく。
 
-![](./images/2-2-2_1.png)
+![](./images/2-2-2_1-d.png)
+![](./images/2-2-2_1-l.png)
 
 ビルドは、ツールバーにあるこのボタンから行う。ショートカットキーは`F5`。実際に実行してみよう。
 
