ソリューションエクスプローラーが右側にある可能性を肯定

--- a/2/2.md
+++ b/2/2.md
@@ -22,7 +22,7 @@ VS2019を起動し、新規プロジェクトの作成に進む。
 
 なんと、~~DxLibと違い、~~ Siv3Dはこれだけでプロジェクトの作成が完了する。
 
-左側のファイルツリーから `Source Files` > `Main.cpp` を開いてみよう。
+ソリューションエクスプローラーから `Source Files` > `Main.cpp` を開いてみよう。
 `void Main()`の中、`while (System::update())`が所謂メインループである。
 
 今はここに書いてあるコードの意味がわからなくても、この講座を通してわかるようになるのが目標なので、ぜひ頑張ってほしい。
