add ~/source/repos/ についての記述

--- a/2/2.md
+++ b/2/2.md
@@ -15,6 +15,7 @@ VS2019を起動し、新規プロジェクトの作成に進む。
 今回なら講座用に`lets-make-minigames`とでもしておくのがいいのではなかろうか。
 
 場所は自分でわかりやすい場所にするべき。あとから探すのは大変なので…
+VisualStudioが用意してくれた場所(`~/source/repos/`)もある。そこを使うのもありかもしれない。
 
 `ソリューションとプロジェクトを同じディレクトリに配置する` は、基本的にチェックを入れていいと思う。VisualStudioには`ソリューション`と`プロジェクト`という２つの概念があるが、ミニゲーム程度のプロジェクトなら分けて考える必要は無い。
 
