--- a/2/2.md
+++ b/2/2.md
@@ -7,7 +7,7 @@ VS2019を起動し、新規プロジェクトの作成に進む。
 
 ![](./images/2-2-1_1.png)
 
-画像のように`OpenSiv3D(0.4.2)`を選択したら、「次へ」。
+画像のように`OpenSiv3D(0.4.2)`(バージョンは異なることもある)を選択したら、「次へ」。
 
 ![](./images/2-2-1_2.png)
 
