--- a/2/3.md
+++ b/2/3.md
@@ -49,7 +49,7 @@ void Main() {
 
 `Print`に`<<`でデータを送ると、それが文字列に変換され画面に表示される。
 
-ここでは文字列を扱うための`String`型を用いて`Hello, Siv3D!`と表示する。`String`型は`U"hoge"`で記述できる。`U`を忘れないように注意。
+ここでは文字列を扱うためにSiv3Dに用意されたクラス`String`を用いて`Hello, Siv3D!`と表示する。`String`は`U"hoge"`とすること作ることができる。`U`を忘れないように注意。
 
 ```cpp
 	Print << U"Hello, Siv3D!";
