--- a/2/3.md
+++ b/2/3.md
@@ -69,12 +69,12 @@ void Main() {
 	// 計算もできる
 	Print << U"33 + 4 =" << 33 + 4;
 	// 配列の中身も出せる
-	Print << Range(0, 10);
+	Print << Array({ 3, 3, 4 });
 	// 座標も出せる
 	Print << Vec2(34, 2019);
 ```
-- `Range(begin, end)`: beginからendまでの配列を返す。
-- `Vec2(x, y)`: 2次元座標。3次元もあるよ。
+- `Array()`: 便利な配列クラス。
+- `Vec2(x, y)`: 2次元座標クラス。3次元もあるよ。
 
 また、こうして画面に表示された文字は自分で削除することもできる。
 ```cpp
